--- a/ResearchMethodologyDataAnalysis.ipynb
+++ b/ResearchMethodologyDataAnalysis.ipynb
@@ -657,45 +657,37 @@
     {
       "cell_type": "code",
       "source": [
-        "keywords = ['qualitative',\n",
-        "'quantitative',\n",
-        "'mixed methods',\n",
-        "'survey',\n",
-        "'interview',\n",
-        "'observation',\n",
-        "'focus group',\n",
-        "'experiment',\n",
-        "'case study',\n",
-        "'longitudinal',\n",
-        "'cross sectional',\n",
-        "'ethnography',\n",
-        "'action research',\n",
-        "'content analysis',\n",
-        "'thematic analysis',\n",
-        "'statistical analysis',\n",
-        "'regression analysis',\n",
-        "'factor analysis',\n",
-        "'correlation',\n",
-        "'anova (analysis of variance)',\n",
-        "'grounded theory',\n",
-        "'meta-analysis',\n",
-        "'systematic review',\n",
-        "'narrative analysis',\n",
-        "'chi-square test',\n",
-        "'t-test',\n",
-        "'pearson correlation',\n",
-        "'spearman',\n",
-        "'mann-whitney u test',\n",
-        "'kruskal-wallis test',\n",
-        "'linear regression',\n",
-        "'logistic regression',\n",
-        "'cluster analysis',\n",
-        "'principal component analysis (pca)',\n",
-        "'random sampling',\n",
-        "'stratified sampling',\n",
-        "'cluster sampling',\n",
-        "'convenience sampling',\n",
-        "'snowball sampling']  # Define your own keywords here\n",
+        "keywords = ['intern',\n",
+        "'trainee',\n",
+        "'apprentice',\n",
+        "'junior',\n",
+        "'associate',\n",
+        "'senior',\n",
+        "'manager',\n",
+        "'supervisor',\n",
+        "'specialist',\n",
+        "'lteam leader',\n",
+        "'coordinator',\n",
+        "'director',\n",
+        "'vice president',\n",
+        "'chief',\n",
+        "'executive',\n",
+        "'general manager',\n",
+        "'president',\n",
+        "'chief executive officer',\n",
+        "'chief operating officer',\n",
+        "'chief information officer)',\n",
+        "'board member',\n",
+        "'ceo',\n",
+        "'cio',\n",
+        "'cfo',\n",
+        "'cto',\n",
+        "'cxo',\n",
+        "'chief technology officer',\n",
+        "'consultant',\n",
+        "'advisor',\n",
+        "'mentor',\n",
+        "'contractor',\n"]  # Define your own keywords here\n",
         "keyword_counts = Counter({key: sum(text.count(key) for text in processed_texts) for key in keywords})\n"
       ],
       "metadata": {
